<resources>
    <string name="app_name">GetAJob</string>

    <!-- Sync Adapter info-->
    <string name="content_authority">com.princecoder.getajob</string>
    <string name="sync_account_type">com.princecoder.getajob</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="pref_startScreen">Select Startscreen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_search">Search</string>
    <string name="nav_myJobs">My Jobs</string>
    <string name="nav_about">About</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_settings">Settings</string>
    <string name="company_logo">Company Logo</string>


    <string name="recycler_binding_error">Not bound to RecyclerView</string>
    <string name="unknown_uri">"Unknown uri: "</string>
    <string name="db_insertion_error">"Failed to insert row into: "</string>
    <string name="db_update_error">Cannot have null content values</string>
    <string name="db_redondance_error">Attempting to insert but value is already in database.
    </string>
    <string name="title_activity_list_jobs">List of jobs</string>
    <string name="title_activity_job_detail">JobDetailActivity</string>
    <string name="job_selected_listener_error">Must Implement OnJobSelectedListener</string>
    <string name="detail_menu">Details</string>
    <string name="widget_empty_view">No data to display</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_feedback_ativity">FeedbackAtivity</string>

    <string name="transition_image">Transition Image</string>
    <string name="analytic_key">UA-75589722-1</string>
    <string name="type_not_specified">Not Specified</string>
    <string name="job_exist_message">Job already saved</string>
    <string name="email_subject">GetAJob Feedback</string>
    <string name="default_email">ngassaprinzly@gmail.com</string>
    <string name="email_message_type">message/rfc822</string>
    <string name="chooser_message">Choose an Email client</string>
    <string name="shareIntent_type">text/plain</string>
    <string name="no_job_found_message">No job found</string>
    <string name="no_internet_message">No Internet. Please check your connection</string>
    <string name="num_page_tag">page</string>
    <string name="criteria_alert">You need to enter a criteria</string>
    <string name="delete_search_message">Do you realy want to remove it from your recent log?
    </string>
    <string name="search_text_hint">Enter the name of the city to sort</string>
    <string name="delete_save_job_message">Do you realy want to remove it from your saved jobs?
    </string>
    <string name="pref_start">pref_startFragment</string>
    <string name="confirm_deletion_mesage">Confirm Deletion ?</string>
    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string>
    <string name="comment_hint">enter your comment here</string>
    <string name="send">Send</string>
    <string name="city">City</string>
    <string name="company">Company</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="apply">Apply</string>
    <string name="description_lbl">Description:</string>
    <string name="type_lbl">Type:</string>
    <string name="relocation_lbl">Relocation assistance:</string>
    <string name="posted_lbl">Posted:</string>
    <string name="keyword_lbl">Keywords:</string>
    <string name="title_hint">Job title or keyword</string>
    <string name="location_hint">Location (Click to choose location)</string>
    <string name="recent_search_lbl">Recent searches</string>
    <string name="search">Search</string>
    <string name="title_activity_apply">Apply</string>

    <string name="about_text">
        Everyone will always be tempted to look for a new job no matter where it can
        be. Most of the times we won’t wait to be in front of a computer to look for a job or
        help a friend or family member look for a job. That is the reason why GetaJob will
        help you find the job you are looking for through your phone or tablet. <br/> This App was designed and developed by Prinzly Ngotoum.
        <br/>Please feel free to leave me any feedback.
    </string>
    <string name="app_version">Version: 1.0.0</string>
    <string name="city_listview_header_title">Choose the Location</string>
    <string name="delete_seach">delete recent search</string>
    <string name="delete_saved_job">delete saved job</string>

</resources>
