<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_search"/>
        <item
            android:id="@+id/nav_my_jobs"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_saved_jobs"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_about"/>
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_feedback"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings"/>
    </group>

</menu>
