<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_deletion_mesage"
        android:textColor="@color/primary_text"
        android:textAppearance="?attr/textAppearanceListItemSmall"
        android:gravity="center"/>
    <!-- Apply and save container-->
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">
        <Button android:layout_width="100dp"
                android:layout_height="40dp"
                android:id="@+id/yes_btn"
                android:text="@string/yes"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/darker_gray"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

        <Button android:layout_width="100dp"
                android:layout_height="40dp"
                android:id="@+id/cancel_btn"
                android:text="@string/cancel"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</LinearLayout>